Improve benchmark implementation